# ca_elevation_review

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  README.md  handoff.md  todo.md
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
docs/: architecture.md  ci.md  design.md  ios-mac-silicon-readiness.md  live-validation-2026-06-29.md  pyrevit-migration-plan.md  schemas.md  testing.md  ui-conventions.md
engine/: pyproject.toml  requirements-dev.txt
engine/fixtures/golden/: f01_verdict_report.json  f02_multilevel_datum_verdict_report.json  f03_tolerance_boundary_verdict_report.json  f04_coverage_orientation_verdict_report.json  f05_distinctions_verdict_report.json  f06_device_wall_verdict_report.json  f07_empty_manifest_verdict_report.json  f08_type_heuristic_verdict_report.json
engine/fixtures/scanner/: f08_posed_scan.e57
engine/fixtures/seeders/: _common.py  f01_synthetic_office.py  f02_multilevel_datum.py  f03_tolerance_boundary.py  f04_coverage_orientation.py  f05_distinctions.py  f06_device_wall.py  f07_empty_manifest.py  f08_type_heuristic.py  regen_goldens.py
engine/fixtures/synthetic/: f01_office.capture.json  f01_office.manifest.json  f02_multilevel_datum.capture.json  f02_multilevel_datum.manifest.json  f03_tolerance_boundary.capture.json  f03_tolerance_boundary.manifest.json  f04_coverage_orientation.capture.json  f04_coverage_orientation.manifest.json  f05_distinctions.capture.json  f05_distinctions.manifest.json  f06_device_wall.capture.json  f06_device_wall.manifest.json  f07_empty_manifest.capture.json  f07_empty_manifest.manifest.json  f08_type_heuristic.capture.json  f08_type_heuristic.manifest.json
engine/src/ca_elevation_engine/: __init__.py  cli.py  compare.py  geometry.py  ingest.py  models.py  pipeline.py  pointcloud.py  register.py  registry.py  typedetect.py  verdict.py
engine/src/ca_elevation_engine/report/: __init__.py  _ordering.py  html.py  json_report.py  pdf.py  text_summary.py
engine/src/ca_elevation_engine/schemas/: capture_package.schema.json  spec_manifest.schema.json  verdict_report.schema.json
engine/tests/: conftest.py  test_cli.py  test_compare_verdict.py  test_e57_heavy.py  test_fixture_drift.py  test_geometry.py  test_ingest.py  test_integration_golden.py  test_integration_heavy.py  test_models.py  test_pdf.py  test_pointcloud.py  test_register.py  test_register_icp_heavy.py  test_registry.py  test_report.py  test_typedetect.py  test_validate_schemas_tool.py
engine/tools/: make_e57_fixture.py  regen_fixtures.py  validate_schemas.py
ios-app/: .mcp.json  .swiftlint.yml  CLAUDE.md  Package.swift  README.md  project.yml
pyrevit-extension/: README.md
revit-addin/: .editorconfig  CaElevationReview.addin  CaElevationReview.sln  README.md
tools/: check_readme_freshness.py
(+97 files in other folders)
